# tgc-demo

./: .gitignore  CMakeLists.txt  README.md  TODO  tgc-demo.sln  tgc-demo.vcxproj  tgc.sublime-project
content/: game_settings
content/groups/: big_cloud.group  bird.group  fern.group  gnu.group  medium_cloud.group  small_cloud.group  test.group  tree.group  tree_test.group
content/paths/: big_cloud.group  big_cloud1.path  big_cloud2.path  big_cloud3.path  bird1_shape0.path  bird1_shape1.path  bird1_shape2.path  bird2_shape1.path  bird2_shape2.path  cloud.path  cloud2.path  cloud3.path  fern1.path  fern2.path  gnu_shape0.path  gnu_shape1.path  gnu_shape10.path  gnu_shape11.path  gnu_shape12.path  gnu_shape13.path  gnu_shape2.path  gnu_shape3.path  gnu_shape4.path  gnu_shape5.path  gnu_shape6.path  gnu_shape7.path  gnu_shape8.path  gnu_shape9.path  leaves.path  medium_cloud1.path  medium_cloud2.path  medium_cloud3.path  parse.py  small_cloud.group  small_cloud1.path  small_cloud2.path  test.path  test_shape0.path  test_shape1.path  test_shape10.path  (+70 more)
content/textures/: bark.dds  paper2.dds  paper3_color.dds  particle.dds  particle2.dds
libs/: CMakeLists.txt
libs/freetype/: CMakeLists.txt
libs/glew/: CMakeLists.txt
libs/glfw/: CMakeLists.txt  GLFW.lib
paths/: big_cloud1.path  big_cloud3.path  cloud3.path  medium_cloud3.path  parse.py  small_cloud1.path  small_cloud2.path
scripts/: convert_path.py  parse_path.py
src/: animator.cpp  animator.h  character.cpp  character.h  circles.cpp  circles.h  cloud.cpp  cloud.h  clouds.cpp  clouds.h  error.cpp  error.h  game.cpp  game.h  game_entity.h  ground.cpp  ground.h  ideas.cpp  ideas.h  jumping_crowd.cpp  jumping_crowd.h  main.cpp  particle.cpp  particle.h  particle_system.cpp  particle_system.h  path_shape.cpp  path_shape.h  point_mass.cpp  point_mass.h  quad.cpp  quad.h  random.h  renderer.cpp  renderer.h  shader_program.cpp  shader_program.h  thought_bubble.cpp  thought_bubble.h  transform2D.h  (+6 more)
src/common/: game.cpp
src/demo/: background.h  character.cpp  character.h  event_manager.cpp  event_manager.h  game.cpp  game.h  ground.cpp  ground.h  ideas.cpp  main.cpp  point_mass.cpp  point_mass.h  scroller.cpp  thought_bubble.cpp  world.h
src/engine/: animator.cpp  animator.h  circles.cpp  circles.h  engine.cpp  engine.h  entity.cpp  entity.h  fill.cpp  fill.h  particle_system.cpp  particle_system.h  path_shape.cpp  path_shape.h  quad.cpp  quad.h  scene_node.cpp  scene_node.h  shader_program.cpp  shader_program.h  shape.cpp  shape.h  shape_group.cpp  shape_group.h  text.cpp  text.h  updater.cpp  updater.h
src/game/: background.cpp  background.h  birds.cpp  character.cpp  clouds.cpp  event_manager.cpp  ground.cpp  ground.h  ideas.h  jumping_crowd.h  scroller.cpp  scroller.h  state.cpp  state.h  thought_bubble.h  triggerables.h
src/game_state/: background.cpp  background.h  birds.cpp  birds.h  character.cpp  character.h  clouds.cpp  clouds.h  entity.cpp  entity.h  event_manager.cpp  event_manager.h  ground.cpp  ground.h  ideas.cpp  ideas.h  jumping_crowd.cpp  jumping_crowd.h  point_mass.h  scroller.cpp  scroller.h  state.cpp  state.h  thought_bubble.cpp  thought_bubble.h  tree.cpp  tree.h  triggerables.cpp  triggerables.h  updater.cpp  updater.h
src/render/: animator.cpp  animator.h  circles.cpp  circles.h  particle_system.cpp  particle_system.h  path_shape.cpp  path_shape.h  quad.cpp  quad.h  renderer.cpp  renderer.h  scene_node.cpp  scene_node.h  shader_program.cpp  shader_program.h  shape_group.cpp  shape_group.h
src/shaders/: animated.vert  circles.frag  circles_anti_aliased.frag  colored.frag  colored.vert  general.vert  minimal.frag  particle_draw.geom  particle_draw.vert  particle_feedback.vert  particles.frag  particles.vert  quadric.frag  quadric_anti_aliased.frag  shadows.frag  shadows.vert  textured.frag
src/stress-test/: birds.cpp  birds.h  ideas.h  jumping_crowd.cpp  jumping_crowd.h  scroller.h  triggerables.cpp  world.cpp
src/util/: bezier.h  error.cpp  error.h  json.c  json.h  random.h  read_file.cpp  read_file.h  settings.cpp  settings.h  transform2D.h
src/world/: background.cpp  background.h  birds.cpp  character.cpp  character.h  clouds.cpp  clouds.h  ground.cpp  ground.h  ideas.cpp  ideas.h  point_mass.cpp  scroller.cpp  scroller.h  thought_bubble.cpp  (+4 more)
textures/: background.dds  ground.dds  leaves.dds  paper3.dds  particle.dds
(+26 files in other folders)
